# companion-robot

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  codex.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: alerts.yml  prometheus.yml
config/grafana/dashboards/: companion-robot-overview.json  dashboards.yml
crates/bcp-core/: Cargo.toml
crates/bcp-core/src/: builder.rs  codec.rs  command.rs  constants.rs  crc.rs  error.rs  frame.rs  heartbeat.rs  lib.rs  types.rs
docs/: architecture.md  error-handling.md  hardware-form-factor.md  main-brain.md  mobile-sdk.md  multi-user.md  optimization-roadmap.md  performance-sla.md  protocol.md  robot-firmware.md  security.md  shopping-list.md  testing-strategy.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/charging-station/: CMakeLists.txt  sdkconfig.defaults
firmware/charging-station/main/: CMakeLists.txt  config.h  main.c
firmware/components/bcp/: CMakeLists.txt  bcp_codec.c
firmware/components/behavior/: CMakeLists.txt  behavior.c  offline.c
firmware/components/comm/: CMakeLists.txt  ble_gatt.c  conn_manager.c  ws_client.c
firmware/components/diagnostic/: CMakeLists.txt  log_upload.c
firmware/components/expression/: CMakeLists.txt  face.c  led.c  speaker.c
firmware/components/localization/: CMakeLists.txt  localization.c
firmware/components/motion/: CMakeLists.txt  motor.c  obstacle.c  servo.c
firmware/components/perception/: CMakeLists.txt  camera.c  env_sensor.c  imu.c  microphone.c  tof.c  touch.c
firmware/components/power/: CMakeLists.txt  battery.c  charging.c  power_mgr.c
firmware/components/storage/: CMakeLists.txt  log_buf.c  nvs_config.c  ota.c
firmware/main/: CMakeLists.txt  config.h  main.c
firmware/test/: CMakeLists.txt  test_localization.c
mobile/android/: gradle.properties  local.properties.example  settings.gradle.kts
mobile/android/app/: build.gradle.kts
mobile/ios/: Makefile  project.yml
mobile/ios/CompanionRobot/: CompanionRobotApp.swift  Info.plist
prompts/: 01-bcp-protocol.md  02-robot-firmware.md  03-main-brain-gateway.md  04-main-brain-scheduler.md  05-main-brain-device-mgr.md  06-mobile-ble.md  07-mobile-bridge.md  08-charging-station.md  09-testing.md  10-devops.md  README.md
scripts/: init.sql
services/ai/: Cargo.toml  Dockerfile
services/ai/src/: asr.rs  behavior.rs  config.rs  dialogue.rs  error.rs  main.rs  metrics.rs  nats.rs  nlu.rs  vision.rs
services/device-manager/: Cargo.toml  Dockerfile
services/device-manager/src/: api.rs  config.rs  db.rs  (+6 more)
services/gateway/: Cargo.toml  Dockerfile
services/gateway/src/: auth.rs  config.rs  conn_pool.rs  error.rs  main.rs  metrics.rs  nats_bridge.rs  rate_limiter.rs  ws_server.rs
services/scheduler/: Cargo.toml  Dockerfile
services/scheduler/src/: api.rs  config.rs  error.rs  main.rs  metrics.rs  nats.rs  scheduler.rs  task.rs
tests/load/: gateway-scale.js  gateway-spike.js
tests/protocol/: Cargo.toml
(+60 files in other folders)
