[package]
name = "ai-service"
version = "0.1.0"
edition = "2021"
description = "AI Inference Service — ASR/NLU/dialogue/vision for the companion-robot cluster"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
async-nats = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.5"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }

# Local inference backends
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
tract-onnx = "0.21"
hound = "3.5"
ndarray = "0.16"
