[package]
name = "gateway"
version = "0.1.0"
edition = "2021"
description = "BCP Gateway Service — WebSocket/TCP frontend for the companion-robot cluster"

[dependencies]
bcp-core = { path = "../../crates/bcp-core" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
async-nats = "0.36"
heapless = "0.8"
futures-util = "0.3"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.5"
governor = "0.7"
nonzero_ext = "0.3"
anyhow = "1"
ed25519-dalek = "2"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
