[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"
description = "Task Scheduler — multi-robot task assignment with weighted scoring"

[dependencies]
bcp-core = { path = "../../crates/bcp-core" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
async-nats = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.5"
anyhow = "1"
thiserror = "2"
futures-util = "0.3"
hex = "0.4"
